# IMU_GPS_FUSION

./: LICENSE  README.md
IMU_GPS_FUSION_2023/: CMakeLists.txt
IMU_GPS_FUSION_2023/src/: CMakeLists.txt  mat.cpp  mat.h  navi.cpp
IMU_GPS_FUSION_2023/test_data/: VM2_432033890  VM2_776695195  VM2_test1  VM2_test3  VM2_test4
IMU_GPS_FUSION_2023/tmp_file/: test2.py
IMU_GPS_FUSION_with_commit/src/: main.cpp  mat.cpp  mat.h  navi.cpp  navi.h
IMU_GPS_FUSION_with_commit/test_data/: VM2_30234023  VM2_test2  VM2_test5
IMU_GPS_FUSION_with_commit/tmp_file/: plot_on_map.py  test.py  vis_python.py
VIS_front_backend/: manage.py
VIS_front_backend/DemoApp/: asgi.py  settings.py  urls.py  views.py  wsgi.py
VIS_front_backend/helper/: IMU_GPS_FUSION
VIS_front_backend/static/js/: http.js
